# ToDoApp

todo_app/: .gitignore  pyproject.toml  todo_db.json
todo_app/src/todo_app/: cli.py  models.py  services.py  storage.py
